test/ruby/syntax_error/config.ru
app = Proc.new |env|
    ['200', {'Content-Length' => '0'}, ['']]
end

run app
